Work around missing getpeereid declaration on AIX.

* configure.ac: Check for a declaration of getpeereid.
* src/assuan-socket-server.c (getpeereid)
[HAVE_GETPEEREID && !HAVE_DECL_GETPEEREID]: Declare function.
(accept_connection_bottom): Adjust a comment.

--
GnuPG-bug-id: 7631
Signed-off-by: Collin Funk <collin.funk1@gmail.com>